chore: adding 'noto sans' font

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,8 @@ interface Props {
 
 const { title } = Astro.props;
 import "../styles/main.css"
+import '@fontsource/noto-sans';
+
 ---
 
 <!doctype html>
