update: update navbar styles

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,27 +3,27 @@
 ---
 
 <nav
-  class="fixed w-full top-0 left-0 px-0 sm:px-4 md:px-8 backdrop-blur-md flex h-16"
+  class="fixed w-full top-0 left-0 px-0 sm:px-4 md:px-8 backdrop-blur-md h-16 z-50 flex"
 >
   <div
     class="mr-5 h-full flex items-center shadow-background-900 transition-all hover:shadow-md hover:animate-jump"
   >
     <a
       href="#"
-      class="text-xl font-bold text-primary-600 rounded-md border-2 p-2 border-primary-600"
+      class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 ml-2 md:ml-0"
       >TT</a
     >
   </div>
   <div
-    class="h-full flex items-center font-light space-x-4 text-primary-600 transition-colors duration-200"
+    class="h-full flex items-center font-normal dark:font-semibold space-x-4 text-text-800 transition-colors duration-200"
   >
-    <a href="#about" class="hover:text-primary-800">About</a>
-    <a href="#tech" class="hover:text-primary-800">Technologies</a>
-    <a href="#project" class="hover:text-primary-800">Projects</a>
-    <a href="#blog" class="hover:text-primary-800">Blog</a>
-    <a href="#contact" class="hover:text-primary-800">Contact me</a>
+    <a href="#about" class="hover:text-text-950">About</a>
+    <a href="#tech" class="hover:text-text-950">Technologies</a>
+    <a href="#project" class="hover:text-text-950">Projects</a>
+    <a href="#blog" class="hover:text-text-950">Blog</a>
+    <a href="#contact" class="hover:text-text-950">Contact me</a>
   </div>
   <span
-    class="hidden sm:inline-block absolute -bottom-3 sm:left-4 md:left-8 sm:right-4 md:right-8 h-3 rounded-md rounded-b-none border-[1px] border-b-0 border-primary-500"
+    class="hidden sm:inline-block absolute -bottom-3 sm:left-4 md:left-8 sm:right-4 md:right-8 h-3 rounded-md max-w-7xl rounded-b-none border-[1px] border-b-0 border-text-800"
   ></span>
 </nav>
