--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,27 @@
 ---
-import Layout from '../layouts/Layout.astro';  
+import About from "../components/Home/About.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Valentin TT">
-  <main class="min-h-screen w-full flex justify-center items-center flex-col bg-background-950 text-primary-50">
-    <p class="text-3xl">Primer titulo</p>
-    <p class="italic">Segundo</p></main>
+  <main
+    class="min-h-screen w-full scroll-smooth sm:shadow-[4.0px_8.0px_8.0px_rgba(0,0,0,0.38)]"
+  >
+    <About />
+    <section
+      class="min-h-screen w-full flex justify-center items-center bg-background-200 text-secondary-50"
+      id="tech"
+    >
+      <h1>Technologies</h1>
+    </section>
+  </main>
 </Layout>
 
-<style>
-	 
-</style>
+<style></style>
+<script
+  src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"
+  is:inline></script>
+
+<script>
+  var rellax = new Rellax(".rellax");
+</script>
