--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,9 +21,14 @@ import "@fontsource/noto-sans";
   </head>
   <body class="bg-background-100 text-text-950">
     <Navbar />
-    <div class="mx-auto sm:mx-4 md:mx-8 max-w-7xl">
+    <main
+      class="min-h-screen container mx-auto scroll-smooth sm:shadow-[4.0px_8.0px_8.0px_rgba(0,0,0,0.38)]"
+    >
+      <span
+        class="hidden sm:inline-block fixed container top-16 h-3 rounded-md rounded-b-none border-[1px] border-b-0 border-text-800 z-50 opacity-0 transition-all"
+        id="border-top"></span>
       <slot />
-    </div>
+    </main>
   </body>
 </html>
 <style is:global>
@@ -64,5 +69,23 @@ import "@fontsource/noto-sans";
   *::-webkit-scrollbar-thumb {
     border: 0px;
     background-color: var(--background-300);
+  }
+</style>
+
+<script>
+  window.addEventListener("scroll", function () {
+    const borderTop = document.getElementById("border-top");
+    if (borderTop === null) return;
+    if (window.scrollY > 30) {
+      borderTop.classList.add("scrolled");
+    } else {
+      borderTop.classList.remove("scrolled");
+    }
+  });
+</script>
+
+<style>
+  .scrolled {
+    opacity: 1;
   }
 </style>
