feat: install splited, gsap and lenis

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -94,4 +94,14 @@ import "@fontsource/noto-sans";
       borderTop.classList.remove("scrolled");
     }
   });
+  import Lenis from "@studio-freight/lenis";
+
+  const lenis = new Lenis();
+
+  function raf(time) {
+    lenis.raf(time);
+    requestAnimationFrame(raf);
+  }
+
+  requestAnimationFrame(raf);
 </script>
