fix: tight text in headers

--- a/src/components/Home/About.astro
+++ b/src/components/Home/About.astro
@@ -3,13 +3,15 @@ import Hero from "./Hero.astro";
 ---
 
 <section
-  class="min-h-screen w-full flex flex-col-reverse lg:flex-row justify-center items-center bg-background-200 lg:bg-background-100 lg:pl-6"
+  class="min-h-screen w-full flex flex-col-reverse lg:flex-row justify-center items-center bg-background-200 lg:bg-background-100 lg:pl-6 pb-10 lg:pb-0"
   id="about"
 >
   <header class="w-full lg:w-4/6 lg:pt-16 flex flex-col">
-    <h1 class="text-8xl font-medium hidden lg:inline">VALENTIN TT.</h1>
+    <h1 class="text-8xl font-medium hidden lg:inline tracking-tight">
+      VALENTIN TT.
+    </h1>
     <h2
-      class="max-w-max text-5xl bg-gradient-to-r from-primary-400 to-accent-950 bg-clip-text text-transparent font-medium my-5 hidden lg:inline"
+      class="max-w-max text-5xl bg-gradient-to-r from-primary-400 to-accent-950 bg-clip-text text-transparent font-medium my-5 hidden lg:inline tracking-tight"
     >
       Software Developer.
     </h2>
