--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,10 +16,10 @@ import Layout from "../layouts/Layout.astro";
     id="tech"
   >
   </section>
-  <!-- <script
+  <script
     src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"
     is:inline></script>
   <script>
     var rellax = new Rellax(".rellax");
-  </script> -->
+  </script>
 </Layout>
