--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,7 +12,7 @@
       >
         <a
           href="#"
-          class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 ml-2 md:ml-1"
+          class="text-xl font-bold text-text-800 rounded-md border-2 p-2 border-text-800 ml-2 md:ml-1 tracking-tighter"
           >TT</a
         >
       </div>
