--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,9 +22,7 @@ import "@fontsource/noto-sans";
   </head>
   <body class="bg-background-100 text-text-950">
     <Navbar />
-    <main
-      class="min-h-screen container mx-auto scroll-smooth sm:shadow-[4.0px_8.0px_8.0px_rgba(0,0,0,0.38)]"
-    >
+    <main class="min-h-screen container mx-auto scroll-smooth">
       <span
         class="hidden lg:inline-block fixed container top-16 h-3 rounded-md rounded-b-none border-[1px] border-b-0 border-text-800 z-50 opacity-0 transition-all"
         id="border-top"></span>
@@ -98,7 +96,7 @@ import "@fontsource/noto-sans";
 
   const lenis = new Lenis();
 
-  function raf(time) {
+  function raf(time: any) {
     lenis.raf(time);
     requestAnimationFrame(raf);
   }
