--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import "@fontsource/noto-sans";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Valentin TT portfolio" />
@@ -20,7 +20,7 @@ import "@fontsource/noto-sans";
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-background-100 text-text-950">
+  <body class="text-text">
     <Navbar />
     <main class="min-h-screen container mx-auto scroll-smooth">
       <span
