feat: updating colors in sections to match theme

--- a/src/components/Home/About.astro
+++ b/src/components/Home/About.astro
@@ -3,8 +3,10 @@ import Hero from "./Hero.astro";
 ---
 
 <section
-  class="min-h-screen w-full flex flex-col-reverse lg:flex-row justify-center items-center bg-background-200 lg:bg-background-100 lg:pl-6 pb-10 lg:pb-0"
+  class="min-h-screen w-full flex flex-col-reverse lg:flex-row justify-between items-center lg:pl-6 lg:bg-background bg-transparent lg:mb-5"
   id="about"
+  data-color="#daf1e7"
+  data-color-dark="#0e251b"
 >
   <header class="w-full lg:w-4/6 lg:pt-16 flex flex-col">
     <h1 class="text-8xl font-medium hidden lg:inline tracking-tight">
@@ -16,7 +18,7 @@ import Hero from "./Hero.astro";
       Software Developer.
     </h2>
     <p
-      class="max-w-4xl lg:pr-10 xl:pr-52 lg:pt-6 px-5 lg:px-0 py-3 lg:py-0 mx-3 sm:mx-16 lg:mx-0 border border-background-900 lg:border-0 rounded-lg shadow-[4.0px_8.0px_8.0px_rgba(0,0,0,0.18)] lg:shadow-none z-10 bg-background-200 lg:bg-transparent"
+      class="max-w-4xl lg:pr-10 xl:pr-52 lg:pt-6 px-5 lg:px-0 py-3 lg:py-0 mx-3 sm:mx-16 my-10 lg:mx-0 border border-text-500 lg:border-0 rounded-lg shadow-[4.0px_8.0px_8.0px_rgba(0,0,0,0.18)] lg:shadow-none z-10 bg-background-50 lg:bg-transparent"
     >
       <!-- TODO: bg-background 200 or 100 or 300? -->
        Hey there! 👋 I'm Valentin TT, an enthusiastic Information Systems
