--- a/src/components/Home/Hero.astro
+++ b/src/components/Home/Hero.astro
@@ -4,7 +4,7 @@ const { default: MeSitting } = await import("/src/svg/me-sitting.svg?raw");
 ---
 
 <hero
-  class="w-full lg:w-2/6 min-h-screen bg-background-200 flex flex-col justify-center items-center"
+  class="w-full lg:w-2/6 min-h-screen bg-background-100 flex flex-col justify-center items-center sm:rounded-xl lg:rounded-none"
 >
   <h1 class="pt-20 text-5xl font-medium lg:hidden">VALENTIN TT.</h1>
   <div class="w-96 lg:hidden">
