--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,7 +21,7 @@
       >
         <a href="#about" class="hover:text-text-950">About</a>
         <a href="#tech" class="hover:text-text-950">Technologies</a>
-        <a href="#project" class="hover:text-text-950">Projects</a>
+        <a href="#projects" class="hover:text-text-950">Projects</a>
         <a href="#blog" class="hover:text-text-950">Blog</a>
         <a href="#contact" class="hover:text-text-950">Contact me</a>
       </div>
