--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ import "@fontsource/noto-sans";
     <Navbar />
     <main class="min-h-screen container mx-auto scroll-smooth">
       <span
-        class="hidden lg:inline-block fixed container top-16 h-3 rounded-md rounded-b-none border-[1px] border-b-0 border-text-800 z-50 opacity-0 transition-all"
+        class="hidden lg:inline-block fixed container top-16 h-3 rounded-none rounded-b-none border-t-[1px] border-0 border-text-800 z-50 opacity-0 transition-all"
         id="border-top"></span>
       <slot />
     </main>
