--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,137 +3,137 @@
 @tailwind utilities;
 @layer base {
   :root {
-    --text: #030705;
-    --background: #f4fbf8;
-    --primary: #48cb8c;
-    --secondary: #84e6b8;
-    --accent: #4ee99e;
+    --text: #020c12;
+    --background: #f6fbfe;
+    --primary: #1fa0e0;
+    --secondary: #a487ee;
+    --accent: #382bca;
 
-    --text-50: #edf7f2;
-    --text-100: #dbf0e6;
-    --text-200: #b8e0cc;
-    --text-300: #94d1b3;
-    --text-400: #70c299;
-    --text-500: #4db380;
-    --text-600: #3d8f66;
-    --text-700: #2e6b4d;
-    --text-800: #1f4733;
-    --text-900: #0f241a;
-    --text-950: #08120d;
+    --text-50: #e8f5fc;
+    --text-100: #d1eafa;
+    --text-200: #a3d6f5;
+    --text-300: #75c1f0;
+    --text-400: #47aceb;
+    --text-500: #1997e6;
+    --text-600: #1479b8;
+    --text-700: #0f5b8a;
+    --text-800: #0a3d5c;
+    --text-900: #051e2e;
+    --text-950: #030f17;
 
-    --background-50: #ecf8f3;
-    --background-100: #daf1e7;
-    --background-200: #b4e4cf;
-    --background-300: #8fd6b7;
-    --background-400: #69c99f;
-    --background-500: #44bb87;
-    --background-600: #36966c;
-    --background-700: #297051;
-    --background-800: #1b4b36;
-    --background-900: #0e251b;
-    --background-950: #07130e;
+    --background-50: #e8f5fc;
+    --background-100: #d1eafa;
+    --background-200: #a3d6f5;
+    --background-300: #75c1f0;
+    --background-400: #47aceb;
+    --background-500: #1997e6;
+    --background-600: #1479b8;
+    --background-700: #0f5b8a;
+    --background-800: #0a3d5c;
+    --background-900: #051e2e;
+    --background-950: #030f17;
 
-    --primary-50: #ebf9f2;
-    --primary-100: #d7f4e6;
-    --primary-200: #afe9cd;
-    --primary-300: #88ddb4;
-    --primary-400: #60d29b;
-    --primary-500: #38c782;
-    --primary-600: #2d9f68;
-    --primary-700: #22774e;
-    --primary-800: #165034;
-    --primary-900: #0b281a;
-    --primary-950: #06140d;
+    --primary-50: #e9f5fc;
+    --primary-100: #d2ecf9;
+    --primary-200: #a5d9f3;
+    --primary-300: #78c6ed;
+    --primary-400: #4bb3e7;
+    --primary-500: #1fa0e0;
+    --primary-600: #1880b4;
+    --primary-700: #126087;
+    --primary-800: #0c405a;
+    --primary-900: #06202d;
+    --primary-950: #031016;
 
-    --secondary-50: #eafbf3;
-    --secondary-100: #d5f6e7;
-    --secondary-200: #aaeece;
-    --secondary-300: #80e5b6;
-    --secondary-400: #56dc9d;
-    --secondary-500: #2bd485;
-    --secondary-600: #23a96a;
-    --secondary-700: #1a7f50;
-    --secondary-800: #115535;
-    --secondary-900: #092a1b;
-    --secondary-950: #04150d;
+    --secondary-50: #eee9fc;
+    --secondary-100: #ddd2f9;
+    --secondary-200: #bba6f2;
+    --secondary-300: #9a79ec;
+    --secondary-400: #784ce6;
+    --secondary-500: #5620df;
+    --secondary-600: #4519b3;
+    --secondary-700: #341386;
+    --secondary-800: #220d59;
+    --secondary-900: #11062d;
+    --secondary-950: #090316;
 
-    --accent-50: #e8fcf3;
-    --accent-100: #d2f9e6;
-    --accent-200: #a4f4cd;
-    --accent-300: #77eeb4;
-    --accent-400: #49e99c;
-    --accent-500: #1ce383;
-    --accent-600: #16b669;
-    --accent-700: #11884e;
-    --accent-800: #0b5b34;
-    --accent-900: #062d1a;
-    --accent-950: #03170d;
+    --accent-50: #ebeafb;
+    --accent-100: #d8d5f6;
+    --accent-200: #b0abed;
+    --accent-300: #8981e4;
+    --accent-400: #6257db;
+    --accent-500: #3a2dd2;
+    --accent-600: #2f24a8;
+    --accent-700: #231b7e;
+    --accent-800: #171254;
+    --accent-900: #0c092a;
+    --accent-950: #060415;
   }
   .dark {
-    --text: #f8fcfa;
-    --background: #040b08;
-    --primary: #34b777;
-    --secondary: #197b4d;
-    --accent: #16b166;
+    --text: #edf7fd;
+    --background: #010609;
+    --primary: #1fa0e0;
+    --secondary: #2e1178;
+    --accent: #4235d4;
 
-    --text-50: #08120d;
-    --text-100: #0f241a;
-    --text-200: #1f4733;
-    --text-300: #2e6b4d;
-    --text-400: #3d8f66;
-    --text-500: #4db380;
-    --text-600: #70c299;
-    --text-700: #94d1b3;
-    --text-800: #b8e0cc;
-    --text-900: #dbf0e6;
-    --text-950: #edf7f2;
+    --text-50: #030f17;
+    --text-100: #051e2e;
+    --text-200: #0a3d5c;
+    --text-300: #0f5b8a;
+    --text-400: #1479b8;
+    --text-500: #1997e6;
+    --text-600: #47aceb;
+    --text-700: #75c1f0;
+    --text-800: #a3d6f5;
+    --text-900: #d1eafa;
+    --text-950: #e8f5fc;
 
-    --background-50: #07130e;
-    --background-100: #0e251b;
-    --background-200: #1b4b36;
-    --background-300: #297051;
-    --background-400: #36966c;
-    --background-500: #44bb87;
-    --background-600: #69c99f;
-    --background-700: #8fd6b7;
-    --background-800: #b4e4cf;
-    --background-900: #daf1e7;
-    --background-950: #ecf8f3;
+    --background-50: #030f17;
+    --background-100: #051e2e;
+    --background-200: #0a3d5c;
+    --background-300: #0f5b8a;
+    --background-400: #1479b8;
+    --background-500: #1997e6;
+    --background-600: #47aceb;
+    --background-700: #75c1f0;
+    --background-800: #a3d6f5;
+    --background-900: #d1eafa;
+    --background-950: #e8f5fc;
 
-    --primary-50: #06140d;
-    --primary-100: #0b281a;
-    --primary-200: #165034;
-    --primary-300: #22774e;
-    --primary-400: #2d9f68;
-    --primary-500: #38c782;
-    --primary-600: #60d29b;
-    --primary-700: #88ddb4;
-    --primary-800: #afe9cd;
-    --primary-900: #d7f4e6;
-    --primary-950: #ebf9f2;
+    --primary-50: #031016;
+    --primary-100: #06202d;
+    --primary-200: #0c405a;
+    --primary-300: #126087;
+    --primary-400: #1880b4;
+    --primary-500: #1fa0e0;
+    --primary-600: #4bb3e7;
+    --primary-700: #78c6ed;
+    --primary-800: #a5d9f3;
+    --primary-900: #d2ecf9;
+    --primary-950: #e9f5fc;
 
-    --secondary-50: #04150d;
-    --secondary-100: #092a1b;
-    --secondary-200: #115535;
-    --secondary-300: #1a7f50;
-    --secondary-400: #23a96a;
-    --secondary-500: #2bd485;
-    --secondary-600: #56dc9d;
-    --secondary-700: #80e5b6;
-    --secondary-800: #aaeece;
-    --secondary-900: #d5f6e7;
-    --secondary-950: #eafbf3;
+    --secondary-50: #090316;
+    --secondary-100: #11062d;
+    --secondary-200: #220d59;
+    --secondary-300: #341386;
+    --secondary-400: #4519b3;
+    --secondary-500: #5620df;
+    --secondary-600: #784ce6;
+    --secondary-700: #9a79ec;
+    --secondary-800: #bba6f2;
+    --secondary-900: #ddd2f9;
+    --secondary-950: #eee9fc;
 
-    --accent-50: #03170d;
-    --accent-100: #062d1a;
-    --accent-200: #0b5b34;
-    --accent-300: #11884e;
-    --accent-400: #16b669;
-    --accent-500: #1ce383;
-    --accent-600: #49e99c;
-    --accent-700: #77eeb4;
-    --accent-800: #a4f4cd;
-    --accent-900: #d2f9e6;
-    --accent-950: #e8fcf3;
+    --accent-50: #060415;
+    --accent-100: #0c092a;
+    --accent-200: #171254;
+    --accent-300: #231b7e;
+    --accent-400: #2f24a8;
+    --accent-500: #3a2dd2;
+    --accent-600: #6257db;
+    --accent-700: #8981e4;
+    --accent-800: #b0abed;
+    --accent-900: #d8d5f6;
+    --accent-950: #ebeafb;
   }
 }
