--- a/src/components/Home/Projects.astro
+++ b/src/components/Home/Projects.astro
@@ -11,8 +11,8 @@ import ProjectStack from "./Project/ProjectStack.astro";
 <section
   class="min-h-screen w-full max-w-full flex flex-col items-center bg-transparent text-secondary-50 space-y-5 overflow-hidden pt-16"
   id="projects"
-  data-color="#d1eafa"
-  data-color-dark="#010101"
+  data-color="#a3d6f5"
+  data-color-dark="#010609"
 >
   <SectionHeader>PROJECTS.</SectionHeader>
   <SpotlightCardsContainer
