--- a/src/components/Home/Technologies.astro
+++ b/src/components/Home/Technologies.astro
@@ -10,7 +10,7 @@ import TechBadge from "../TechBadge.astro";
   data-color="#e8f5fc"
   data-color-dark="#030f17"
 >
-  <SectionHeader>STACK.</SectionHeader>
+  <SectionHeader class="mb-14">STACK.</SectionHeader>
   <div class="ml-4 mt-4 space-y-4">
     <div>
       <h2 class="text-xl sm:text-3xl w-fit" id="tech-kind-title">Frontend</h2>
