--- a/src/components/TechBadge.astro
+++ b/src/components/TechBadge.astro
@@ -1,4 +1,8 @@
 ---
+export interface Props {
+  fromToVia?: string;
+}
+
 let { fromToVia } = Astro.props;
 if (fromToVia === undefined)
   fromToVia = "from-primary-300 via-accent-500 to-accent-800";
@@ -8,7 +12,6 @@ if (fromToVia === undefined)
   class:list={[
     "bg-gradient-to-r p-0.5 bg-[length:_500%_500%] animate-border [animation-duration:_6s] rounded-full m-2 backdrop-blur dark:p-[0.075rem]",
     fromToVia,
-    // "dark:bg-[length:_0%_0%] dark:p-0",
   ]}
 >
   <span
