--- a/src/components/Home/Project/ImageLogo.astro
+++ b/src/components/Home/Project/ImageLogo.astro
@@ -1,11 +1,19 @@
 ---
 import { Image } from "astro:assets";
+export interface Props {
+  class?: string;
+  w?: number | `${number}`;
+  h?: number | `${number}`;
+  src: string;
+  alt?: string;
+}
+
 const { src, alt, class: className, w, h } = Astro.props;
 ---
 
 <Image
   src={src}
-  alt={alt ?? ""}
+  alt={alt ?? "Image Logo"}
   width={w ?? "50"}
   height={h ?? "50"}
   class:list={[
