feat: blog section

--- a/src/components/Home/Projects.astro
+++ b/src/components/Home/Projects.astro
@@ -14,7 +14,7 @@ import ProjectStack from "./Project/ProjectStack.astro";
   data-color="#a3d6f5"
   data-color-dark="#010609"
 >
-  <SectionHeader>PROJECTS.</SectionHeader>
+  <SectionHeader class="mb-14">PROJECTS.</SectionHeader>
   <SpotlightCardsContainer
     class="w-full flex flex-wrap justify-center items-center p-2 gap-2 sm:gap-4"
   >
