--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -25,7 +25,7 @@ const { link, icon, class: className, iconClass } = Astro.props;
   >
     <Icon
       name={icon}
-      class:list={["h-7 w-7 text-text dark:text-background", iconClass]}
+      class:list={["text-text dark:text-background", iconClass]}
     />
   </span>
 </a>
