--- a/src/components/Home/Project/ProjectCard.astro
+++ b/src/components/Home/Project/ProjectCard.astro
@@ -18,14 +18,16 @@ const { title, codeLink, blogLink } = Astro.props;
   <main class="py-4 space-y-5">
     <slot />
   </main>
-  <footer class="mt-auto flex space-x-2">
+  <footer class="mt-auto flex space-x-3">
     {
       blogLink !== undefined && blogLink !== "" && (
-        <LinkButton link={blogLink} icon="arrow-up-right">
+        <LinkButton link={blogLink} icon="arrow-up-right" iconClass="w-3 h-3">
           Blog
         </LinkButton>
       )
     }
-    <LinkButton link={codeLink} icon="code">Code</LinkButton>
+    <LinkButton link={codeLink} icon="code" iconClass="w-5 h-5">
+      Code
+    </LinkButton>
   </footer>
 </article>
