fix: minor changes

--- a/src/components/Home/Blog/BlogCard.astro
+++ b/src/components/Home/Blog/BlogCard.astro
@@ -12,7 +12,7 @@ const { title, imageSrc, gradient } = Astro.props;
 ---
 
 <article
-  class="w-80 h-[28rem] rounded-md border border-accent-700 bg-background-50 dark:bg-background-100 overflow-hidden text-text flex flex-col m-3"
+  class="w-80 h-[28rem] rounded-md border border-accent-700 bg-background-50 dark:bg-background-100 overflow-hidden text-text flex flex-col m-3 hover:scale-[1.03] transition-all"
 >
   <header
     class:list={[
