--- a/src/components/Home/Blogs.astro
+++ b/src/components/Home/Blogs.astro
@@ -3,13 +3,14 @@ import SectionHeader from "../SectionHeader.astro";
 import { Image } from "astro:assets";
 import LinkButton from "../LinkButton.astro";
 import BlogCard from "./Blog/BlogCard.astro";
+import { Icon } from "astro-icon/components";
 // import beeWatcherLogo from "../../svg/projects/bee-watcher-logo.png";
 ---
 
 <!-- background 50, background 50-->
 <section
-  class="w-full max-w-full flex flex-col items-center bg-transparent text-secondary-50 space-y-5 overflow-hidden py-16"
-  id="projects"
+  class="relative w-full max-w-full flex flex-col items-center bg-transparent text-secondary-50 space-y-5 overflow-hidden pt-28 pb-40"
+  id="blog"
   data-color="#75c1f0"
   data-color-dark="#030f17"
 >
@@ -31,5 +32,14 @@ import BlogCard from "./Blog/BlogCard.astro";
         );
       })
     }
+  </div>
+  <div
+    class="absolute bottom-5 right-5 flex justify-end items-center group bg-background-100 rounded-lg px-3 shadow-lg"
+  >
+    <a href="/blogs" class="text-lg text-text m-2"> Check All Post</a>
+
+    <span class="group-hover:translate-x-[4px] transition-all">
+      <Icon name="arrow-right" class="text-text w-4 h-4" /></span
+    >
   </div>
 </section>
