refactor: :memo: update june 2024

--- a/src/components/Home/Blogs.astro
+++ b/src/components/Home/Blogs.astro
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon/components";
     }
   </div>
   <div
-    class="absolute bottom-5 right-5 flex justify-end items-center group bg-background-100 rounded-lg px-3 shadow-lg"
+    class="absolute bottom-5 right-5 flex justify-end items-center group bg-background-100 rounded-lg px-3 shadow-lg border border-accent-500 dark:border-emerald-500"
   >
     <a href="/blogs" class="text-lg text-text m-2"> Check All Post</a>
 
