--- a/src/components/Home/Technologies.astro
+++ b/src/components/Home/Technologies.astro
@@ -26,6 +26,11 @@ import TechBadge from "../TechBadge.astro";
         >
           React
         </TechBadge>
+        <TechBadge
+          fromToVia="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600"
+        >
+          Redux
+        </TechBadge>
 
         <TechBadge
           fromToVia="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600"
@@ -57,7 +62,7 @@ import TechBadge from "../TechBadge.astro";
         <TechBadge
           fromToVia="from-pink-500 via-red-500 to-yellow-500 dark:bg-gradient-to-r dark:from-emerald-500 dark:to-lime-600"
         >
-          Java Springboot
+          Go - gin
         </TechBadge>
         <TechBadge
           fromToVia="from-pink-500 via-red-500 to-yellow-500 dark:bg-gradient-to-r dark:from-emerald-500 dark:to-lime-600"
@@ -69,6 +74,11 @@ import TechBadge from "../TechBadge.astro";
         >
           Express.js
         </TechBadge>
+        <TechBadge
+          fromToVia="from-pink-500 via-red-500 to-yellow-500 dark:bg-gradient-to-r dark:from-emerald-500 dark:to-lime-600"
+        >
+          API Design
+        </TechBadge>
       </div>
     </div>
     <div>
@@ -76,8 +86,8 @@ import TechBadge from "../TechBadge.astro";
       <div class="flex ml-4 mt-2 flex-wrap" id="tech-kind">
         <TechBadge>PostgreSQL</TechBadge>
         <TechBadge>MongoDB</TechBadge>
-        <TechBadge>GraphQL</TechBadge>
         <TechBadge>SQL Server</TechBadge>
+        <TechBadge>GraphQL</TechBadge>
       </div>
     </div>
     <div>
